<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Client</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Get Direction</string>
    <string name="btSpeak">Speak</string>
    <string name="description_logo">Yelp</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Theatre</string>
    <string name="description_feature2">Restaurant</string>
    <string name="description_feature3">Hospital</string>
    <string name="description_feature4">ATM</string>
    <string name="description_feature5">Gas</string>
    <string name="description_feature8">Grocery</string>
    <string name="description_feature10">Library</string>
    <string name="description_feature12">Taxi</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Theatre</string>
    <string name="title_feature2">Restaurant</string>
    <string name="title_feature3">Hospital</string>
    <string name="title_feature4">ATM</string>
    <string name="title_feature5">Gas</string>
    <string name="title_feature8">Shop</string>
    <string name="title_feature10">Library</string>
    <string name="title_feature12">Taxi</string>
    <string name="default_intro">Assist Drive</string>
    <string name="about_intro">Welcome to the Driving Assistance</string>
    <string name="search_intro">Search</string>

</resources>
