<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <TextView
            android:id="@+id/welcme"
            style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/android1"
        android:orientation="vertical"
        android:padding="6dip" >

        <Button
            android:id="@+id/home_btn_feature1"
            style="@style/HomeButton"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:drawableTop="@drawable/home_button1"
            android:onClick="onClickFeature"
            android:text="@string/title_feature1"
            android:textColor="#000000" />

        <Button
            android:id="@+id/home_btn_feature2"
            style="@style/HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/home_btn_feature3"
            android:layout_alignLeft="@+id/home_btn_feature5"
            android:drawableTop="@drawable/home_button2"
            android:onClick="onClickFeature"
            android:text="@string/title_feature2"
            android:textColor="#000000" />

        <Button
            android:id="@+id/home_btn_feature3"
            style="@style/HomeButton"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/home_btn_feature2"
            android:drawableTop="@drawable/home_button3"
            android:onClick="onClickFeature"
            android:text="@string/title_feature3"
            android:textColor="#000000" />

        <Button
            android:id="@+id/home_btn_feature10"
            style="@style/HomeButton"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignBaseline="@+id/home_btn_feature1"
            android:layout_alignBottom="@+id/home_btn_feature1"
            android:layout_toRightOf="@+id/home_btn_feature1"
            android:drawableTop="@drawable/home_button10"
            android:onClick="onClickFeature"
            android:text="@string/title_feature10"
            android:textColor="#000000" />

        <Button
            android:id="@+id/home_btn_feature5"
            style="@style/HomeButton"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignBaseline="@+id/home_btn_feature10"
            android:layout_alignBottom="@+id/home_btn_feature10"
            android:layout_toRightOf="@+id/home_btn_feature10"
            android:drawableTop="@drawable/home_button5"
            android:onClick="onClickFeature"
            android:text="@string/title_feature5"
            android:textColor="#000000" />

        <Button
            android:id="@+id/home_btn_feature4"
            style="@style/HomeButton"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignBaseline="@+id/home_btn_feature5"
            android:layout_alignBottom="@+id/home_btn_feature5"
            android:layout_toRightOf="@+id/home_btn_feature5"
            android:drawableTop="@drawable/home_button4"
            android:onClick="onClickFeature"
            android:text="@string/title_feature4"
            android:textColor="#000000" />

        <Button
            android:id="@+id/home_btn_feature8"
            style="@style/HomeButton"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignBaseline="@+id/home_btn_feature4"
            android:layout_alignBottom="@+id/home_btn_feature4"
            android:layout_toRightOf="@+id/home_btn_feature4"
            android:drawableTop="@drawable/home_button8"
            android:onClick="onClickFeature"
            android:text="@string/title_feature8"
            android:textColor="#000000" />

        <Button
            android:id="@+id/home_btn_feature12"
            style="@style/HomeButton"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignBaseline="@+id/home_btn_feature3"
            android:layout_alignBottom="@+id/home_btn_feature3"
            android:layout_toLeftOf="@+id/home_btn_feature3"
            android:drawableTop="@drawable/home_button12"
            android:onClick="onClickFeature"
            android:text="@string/title_feature12"
            android:textColor="#000000" />
        
    </RelativeLayout>

</LinearLayout>